--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-@import url(styles/header.css);
+@import url("styles/header.css");
 
 :root {
-    --cor-de-fundo: #ebecee;
+    --cor-de-fundo: #efefef;
+    --branco: #ffffff;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.52deg, #002F52 35.49%, #326589 165.37%);
 }
 
 body {
     background-color: var(--cor-de-fundo);
+    font-family: Arial, Helvetica, sans-serif;
 }
-
