--- a/styles/banner.css
+++ b/styles/banner.css
@@ -8,7 +8,7 @@
 .banner__titulo {
     font-size: 18px;
     font-weight: 700;
-    margin: 1em 0;
+    margin: 1em 0 0.5 0;
 }
 
 .banner__texto {
@@ -33,4 +33,16 @@
     color: var(--branco);
     background: url("../img/Lupa.svg") no-repeat;
     background-position: 0.5em;
+}
+
+@media screen and (min-width:1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+    .banner__pesquisa {
+        width: 50%;
+    }
+    .banner__pesquisa::placeholder { 
+        background-position: 7.5em;
+    }
 }
