--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -87,3 +87,26 @@
 .card__estrelinhas {
     margin: 0.5em 0 0.5em 0;
 }
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+    .swiper {
+        width: 60%;
+    }
+    .swiper-botton-prev, 
+    .swiper-botton-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
+}
