--- a/styles/tópicos.css
+++ b/styles/tópicos.css
@@ -26,3 +26,12 @@
     font-weight: 700;
     text-decoration: none;
 }
+
+@media screen and (min-width:1024px) {
+    .tópicos__titulo {
+        font-size: 24px;
+    }
+    .tópicos__link {
+        font-size: 24px;
+    }
+}
