--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --fonte-principal: "Poppins";
     --fonte-secundaria: "josefin Sans";
     --preto: #000000;
+    --cinza: #858585;
 }
 
 body {
