--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -34,7 +34,7 @@
 
 .card {
     background: var(--branco);
-    box-shadow: 0px 4px 4px rgba(0,0,0,-0.25);
+    box-shadow: 0 4px 4px rgb(160, 160, 160);
     border-radius: 10px;
     margin: 1em;
     padding: 1em;
@@ -108,5 +108,33 @@
     .card {
         width: 40%;
         margin: 2em auto;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container {
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+    }
+    .swiper-pagination {
+        position: initial;
+        margin: 1em 0;
+    }
+    .swiper {
+        width: 50%;
+    }
+    .descrição__titulo {
+        font-size: 32px;
+    }
+    .descrição__texto {
+        font-size: 16px;
+    }
+    .descrição {
+        margin-right: 1em;
+    }
+    .card {
+        width: 60%;
+        margin-left: 3em;
     }
 }
