--- a/styles/header.css
+++ b/styles/header.css
@@ -23,7 +23,9 @@
 .container__imagem {
     padding: 1em;
 }
-
+.container__texto{
+    display: none;
+}
 .lista-menu {
     display: none;
     position: absolute;
@@ -88,7 +90,9 @@
     .opções {
         display: flex;
     }
-
+    .container__texto {
+        display: none;
+    }
     .opções__item {
         padding: 1em;
         text-transform: uppercase;
@@ -111,7 +115,29 @@
         display: block;
         width: auto;
     }
+
     .opções__botão {
         display: none;
     }
+}
+
+@media screen and (min-width: 1728px) {
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+    .container__texto {
+        display: block;
+    }
+
+    .cabeçalho {
+        padding: 0 2em;
+    }
+
+    .opções {
+        margin-right: auto;
+    }
+
 }
